bug: Fix overflow content in modal (#209)
* bug: Fix overflow content in modal

* add a max-width

* bump version

* fix typo

--- a/packages/components/src/Modal/FullPagePanelModal/components/Body/ModalBody.module.css
+++ b/packages/components/src/Modal/FullPagePanelModal/components/Body/ModalBody.module.css
@@ -7,6 +7,7 @@
   border-bottom: none;
   box-shadow: 2px 2px 8px var(--dropshadow-grey);
   transition: margin-left 0.1s ease-out, margin-left 0.1s ease-out;
+  overflow-y: hidden;
 }
 
 .leftPanel {
